--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <router-outlet />
-<h1 class="text-3xl font-bold underline">
+<!-- <h1 class="text-3xl font-bold underline">
   Hello world!
-</h1>
+</h1> -->
+<app-booking></app-booking>
