--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -1,4 +1,4 @@
- <div class="bg-white shadow-md rounded-lg p-6">
+ <!-- <div class="bg-white shadow-md rounded-lg p-6">
     <h2 class="text-2xl font-bold mb-4">Add a New Product</h2>
   
     <div class="p-4 bg-white rounded-lg shadow-xl">
@@ -42,4 +42,4 @@
         <button type="submit" class="btn btn-secondary w-full"> Add </button>
       </form>
     </div>
-  </div>
+  </div> -->
