--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -1,45 +1,39 @@
- <!-- <div class="bg-white shadow-md rounded-lg p-6">
-    <h2 class="text-2xl font-bold mb-4">Add a New Product</h2>
-  
-    <div class="p-4 bg-white rounded-lg shadow-xl">
-      <form class="space-y-6">
-        <div class="form-group">
-          <label for="location" class="block text-sm font-medium text-gray-700 mb-1">Category</label>
-          <select type="text" class="select select-bordered w-full mt-1" id="location"  name="location" placeholder="Enter location" required>
-            <option value="cyclinders">Cylinders</option>
-            <option value="stoves">Stoves</option>
-            <option value="spares">Spares</option>
-          </select>
-        </div>
-  
-        <div class="form-group">
-          <label for="parking" class="block text-sm font-medium text-gray-700 mb-1">Title</label>
-          <input type="text"class="input input-bordered w-full mt-1" name="parking" required>
-        </div>
-  
-        <div class="form-group">
-          <label for="rooms" class="block text-sm font-medium text-gray-700 mb-1">Description</label>
-          <input type="text" class="input input-bordered w-full mt-1" id="rooms" name="rooms" placeholder="description here..." required>
-        </div>
-  
-        <div class="form-group">
-          <label for="electricity" class="block text-sm font-medium text-gray-700 mb-1">Price</label>
-          <input type="number" class="input input-bordered w-full mt-1" name="electricity" required>
-        </div>
-  
-        <div class="form-group">
-          <label for="bathroom" class="block text-sm font-medium text-gray-700 mb-1">Quantity</label>
-          <input type="number"  class="input input-bordered w-full mt-1" name="bathroom">
-        </div>
-  
-        <div class="form-group">
-          <label for="images" class="block text-sm font-medium text-gray-700 mb-1">Add Image</label>
-          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
-            <input type="file" class="file-input file-input-bordered w-full mt-1" name="images" (change)="fileSelect($event)">
-          </div>
-        </div>
-  
-        <button type="submit" class="btn btn-secondary w-full"> Add </button>
-      </form>
-    </div>
-  </div> -->
+<div class="bg-white shadow-md rounded-lg p-6"> 
+  <h2 class="text-2xl font-bold mb-4">Add a New Booking</h2>
+
+  <div class="p-4 bg-white rounded-lg shadow-xl">
+    <form  (ngSubmit)="onSubmit()" class="space-y-6">
+      <div class="form-group">
+        <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
+        <input type="text" formControlName="name" class="input input-bordered w-full mt-1" required>
+      </div>
+
+      <div class="form-group">
+        <label for="address" class="block text-sm font-medium text-gray-700 mb-1">Address</label>
+        <input type="text" formControlName="address" class="input input-bordered w-full mt-1" required>
+      </div>
+
+      <div class="form-group">
+        <label for="contact" class="block text-sm font-medium text-gray-700 mb-1">Contact</label>
+        <input type="text" formControlName="contact" class="input input-bordered w-full mt-1">
+      </div>
+
+      <div class="form-group">
+        <label for="description" class="block text-sm font-medium text-gray-700 mb-1">Description</label>
+        <input type="text" formControlName="description" class="input input-bordered w-full mt-1" placeholder="description here..." required>
+      </div>
+
+      <div class="form-group">
+        <label for="logo" class="block text-sm font-medium text-gray-700 mb-1">Add Logo</label>
+        <input type="file" id="logo" (change)="onFileSelect($event)" class="file-input file-input-bordered w-full mt-1">
+      </div>
+
+      <div class="form-group">
+        <label for="services" class="block text-sm font-medium text-gray-700 mb-1">Services</label>
+        <input type="text" formControlName="services" class="input input-bordered w-full mt-1" placeholder="Comma-separated services..." required>
+      </div>
+
+      <button type="submit" class="btn btn-secondary w-full"> Add </button>
+    </form>
+  </div>
+</div>
