--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -1,1 +1,15 @@
-<p>landingpage works!</p>
+<div  class="bg-video" loading="lazy">
+  <video class="bg-video__content w-full h-modal object-cover" autoplay muted loop>
+  <source src="/assets/1105722095-preview.mp4" type="video/mp4">
+</video>
+</div>
+<div class="text-center py-10 px-4 sm:px-6 lg:px-8">
+  <h1 class="block text-2xl font-bold text-white sm:text-4xl">Cover </h1>
+  <p class="mt-3 text-lg text-gray-300">Cover is a one-page template for building simple and beautiful home pages using Tailwind CSS.</p>
+  <div class="mt-5 flex flex-col justify-center items-center gap-2 sm:flex-row sm:gap-3">
+    <a class="w-full sm:w-auto py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-white text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none" target="parent" href="../examples.html">
+      <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m15 18-6-6 6-6"/></svg>
+      Back to examples
+    </a>
+  </div>
+</div>
