--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,11 @@
-<!-- Contact Us -->
 <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
     <div class="max-w-xl mx-auto">
       <div class="text-center">
         <h1 class="text-3xl font-bold text-gray-800 sm:text-4xl dark:text-white">
-          Contact us
+          Sign In
         </h1>
         <p class="mt-1 text-gray-600 dark:text-neutral-400">
-          We'd love to talk about how we can help you.
+          
         </p>
       </div>
     </div>
@@ -62,9 +61,8 @@
           
         </form>
       </div>
-      <!-- End Card -->
+    
     </div>
   
     
   </div>
-  <!-- End Contact Us -->
