--- a/src/app/components/staff/staff.component.html
+++ b/src/app/components/staff/staff.component.html
@@ -1,6 +1,9 @@
 <div class="container">
+    <div class="ProfilePIC">
+        <img src="../../../assets/SalonMain.jpg">
+    </div>
     <div class="profile">
-        <img src="" alt="Rounded avatar">
+        <img src="../../../assets/istockphoto-1394347322-612x612.jpg" alt="Rounded avatar">
         <div>
             <p>Jenny Wilson</p>
             <p>Glamour Haven</p>
@@ -11,10 +14,11 @@
         <h2>Service List</h2>
 
         <div class="service-item">
-            <img src="" alt="Men's Hair Cut">
+            <img src="../../../assets/001-1.png" alt="Men's Hair Cut">
             <div class="details">
                 <div class="info">
                     <h3>Men's Hair Cut</h3>
+                    <p>30 minutes</p>
                 </div>
                 <div class="price">
                     R250.00
@@ -24,10 +28,11 @@
         </div>
 
         <div class="service-item">
-            <img src="" alt="Women's Hair">
+            <img src="../../../assets/004-1.png" alt="Women's Hair">
             <div class="details">
                 <div class="info">
                     <h3>Women's Hair</h3>
+                    <p>45 minutes</p>
                 </div>
                 <div class="price">
                     R300.00
@@ -37,10 +42,11 @@
         </div>
 
         <div class="service-item">
-            <img src="" alt="Bridal Beauty Makeup">
+            <img src="../../../assets/002-1.png" alt="Bridal Beauty Makeup">
             <div class="details">
                 <div class="info">
                     <h3>Bridal Beauty Makeup</h3>
+                    <p>1 hour 30 minutes</p>
                 </div>
                 <div class="price">
                     R500.00
@@ -50,10 +56,11 @@
         </div>
 
         <div class="service-item">
-            <img src="" alt="Spa">
+            <img src="../../../assets/005.png" alt="Spa">
             <div class="details">
                 <div class="info">
                     <h3>Spa</h3>
+                    <p>1 hour</p>
                 </div>
                 <div class="price">
                     R600.00
@@ -63,13 +70,28 @@
         </div>
 
         <div class="service-item">
-            <img src="" alt="Pedicure and Manicure">
+            <img src="../../../assets/003-1.png" alt=" Manicure">
             <div class="details">
                 <div class="info">
-                    <h3>Pedicure and Manicure</h3>
+                    <h3>Manicure</h3>
+                    <p>1 hour</p>
                 </div>
                 <div class="price">
-                    R450.00
+                    R200.00
+                </div>
+            </div>
+            <button>Book Now</button>
+        </div>
+
+        <div class="service-item">
+            <img src="../../../assets/Pedicure.jpg" alt="Pedicure ">
+            <div class="details">
+                <div class="info">
+                    <h3>Pedicure</h3>
+                    <p>1 hour</p>
+                </div>
+                <div class="price">
+                    R150.00
                 </div>
             </div>
             <button>Book Now</button>
