--- a/src/app/components/staff/staff.component.css
+++ b/src/app/components/staff/staff.component.css
@@ -6,25 +6,35 @@ body {
 }
 
 .container {
-    max-width: 960px;
-    margin: 30px auto;
-    padding: 20px;
+    max-width: 375px;  
+    margin: 0 auto;
     background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 20px 20px 0 0;
+    overflow: hidden; 
+}
+
+.ProfilePIC {
+    margin-bottom: 10px;
+}
+
+.ProfilePIC img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
 }
 
 .profile {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .profile img {
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .profile p {
@@ -37,11 +47,11 @@ body {
 }
 
 .service-list {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .service-list h2 {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     margin-bottom: 20px;
 }
@@ -49,16 +59,16 @@ body {
 .service-item {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
-    padding: 15px;
+    margin-bottom: 15px; 
+    padding: 10px;
     background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+    
 }
 
 .details {
     flex-grow: 1;
-    margin-right: 20px;
+    margin-right: 15px; 
 }
 
 .info h3 {
@@ -66,22 +76,18 @@ body {
 }
 
 .price {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 
 button {
-    background-color: #007bff;
+    background-color: palevioletred;
     color: #fff;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button:hover {
-    background-color: #0056b3;
+   
 }
 
 .service-item img {
@@ -89,5 +95,5 @@ button:hover {
     height: 80px;
     object-fit: cover;
     border-radius: 8px;
-    margin-right: 20px;
+    margin-right: 15px; 
 }
