--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -1,36 +1,19 @@
-<app-header></app-header>
+
 
 <!-- Hero -->
 <div class="max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8">
   <!-- Grid -->
-  <div class="grid md:grid-cols-2 gap-4 md:gap-8 xl:gap-20 md:items-center">
-    <div>
-      <h1 class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight dark:text-white">Transform Your Style,<span class="text-blue-600"> One Appointment at a Time</span></h1>
-      <p class="mt-3 text-lg text-gray-800 dark:text-neutral-400">Find your perfect style, from cuts to colors</p>
-
-      <!-- Buttons -->
-      <div class="mt-7 grid gap-3 w-full sm:inline-flex">
-        <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="#">
-          Get started
-          <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
-        </a>
-        <!-- <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800 dark:focus:bg-neutral-800" href="#">
-          Contact sales team
-        </a> -->
-      </div>
-      <!-- End Buttons -->
-
-     
-    </div>
+  <div class="grid md:grid-cols-1 gap-4 md:gap-8 xl:gap-20 md:items-center">
+   
     <!-- End Col -->
 
     <div class="relative ms-4">
-      <img class="w-full rounded-md" src="/assets/001-1.png" alt="Hero Image">
+      <!-- <img class="w-full max-h-[10px] rounded-md" src="/assets/001-1.png" alt="Hero Image"> -->
       <div class="absolute inset-0 -z-[1] bg-gradient-to-tr from-gray-200 via-white/0 to-white/0 size-full rounded-md mt-4 -mb-4 me-4 -ms-4 lg:mt-6 lg:-mb-6 lg:me-6 lg:-ms-6 dark:from-neutral-800 dark:via-neutral-900/0 dark:to-neutral-900/0"></div>
 
       <!-- SVG-->
       <div class="absolute bottom-0 start-0">
-        <svg class="w-2/3 ms-auto h-auto text-white dark:text-neutral-900" width="300" height="451" viewBox="0 0 630 451" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="w-2/3 ms-auto h-auto text-blue-400 dark:text-neutral-900" width="300" height="451" viewBox="0 0 630 451" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect x="531" y="352" width="99" height="99" fill="currentColor"/>
           <rect x="140" y="352" width="106" height="99" fill="currentColor"/>
           <rect x="482" y="402" width="64" height="49" fill="currentColor"/>
@@ -55,5 +38,7 @@
     <!-- End Col -->
   </div>
   <!-- End Grid -->
+
+   
 </div>
 <!-- End Hero -->
