I made new changes

--- a/src/app/components/haircuts/haircuts.component.html
+++ b/src/app/components/haircuts/haircuts.component.html
@@ -1,21 +1,33 @@
 <div class="container">
-    <h1>Receipts</h1>
-    <div class="status-labels">
+    <h1>Bookify_Receipts</h1>
+
+    <div class="status-labels">    
         <label>Upcoming</label>
+        <br>
         <label>Completed</label>
+        <br>
         <label>Cancelled</label>
+     
     </div>
-    
-    <div class="date-time">
+   <div class="date-time">
         <label for="dateTime">Date & Time:</label>
         <input type="datetime-local" id="dateTime" name="dateTime">
     </div>
     
     <div class="buttons">
-        <button type="button" onclick="cancelBooking()">Cancel</button>
-        <button type="button" onclick="viewEReceipt()">View E-Receipt</button>
+        <button type="button" onclick="cancelBooking()">Cancel</button><button type="button" onclick="viewEReceipt()">View E-Receipt</button>
     </div>
 </div>
+<div class="container">
+<div class="date-time">
+    <label for="dateTime">Date & Time:</label>
+    <input type="datetime-local" id="dateTime" name="dateTime">
+</div>
+
+<div class="buttons">
+    <button type="button" onclick="cancelBooking()">Cancel</button><button type="button" onclick="viewEReceipt()">View E-Receipt</button>
+</div>
+
 
 
 
