--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -1,7 +1,7 @@
 <div class="service-list" *ngIf="services.length > 0; else noServices">
     <h2>Available Services</h2>
     <ul>
-        <li *ngFor="let service of services" (click)="selectService(service)">
+        <li *ngFor="let service of services">
             <h3>{{ service.name }}</h3>
             <p>Duration: {{ service.duration }} mins</p>
             <p>Price: {{ service.price }}</p>
