--- a/src/app/components/bookings/bookings.component.html
+++ b/src/app/components/bookings/bookings.component.html
@@ -18,13 +18,13 @@
       </thead>
       <tbody>
         <tr *ngFor="let booking of bookings">
-          <td>{{ booking.name}}</td>
+          <!-- <td>{{ booking.name}}</td>
           <td>{{ booking.address }}</td>
           <td>{{ booking.contact }}</td>
           <td>{{ booking.owner}}</td>
           <td>{{ booking.description }}</td>
           <td>{{ booking.logo }}</td>
-          <td>{{ booking.services }}</td>
+          <td>{{ booking.services }}</td> -->
         </tr>
       </tbody>
     </table>
