services run on business click

--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -1,3 +1,5 @@
+<button (click)="goBack()" class="back-button">← Back</button>
+
 <div class="service-list" *ngIf="services.length > 0; else noServices">
     <h2>Available Services</h2>
     <ul>
