--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,6 @@
     <div>
       <h1 class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight dark:text-white">Transform Your Style,<span class="text-blue-600"> One Appointment at a Time</span></h1>
       <p class="mt-3 text-lg text-gray-800 dark:text-neutral-400">Find your perfect style, from cuts to colors</p>
-
       <div class="mt-7 grid gap-3 w-full sm:inline-flex">
         <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="#">
           Get started
@@ -11,11 +10,9 @@
         </a>
       </div>
     </div>
-
     <div class="relative ms-4">
       <img class="w-full rounded-md" src="/assets/001-1.png" alt="Hero Image">
       <div class="absolute inset-0 -z-[1] bg-gradient-to-tr from-gray-200 via-white/0 to-white/0 size-full rounded-md mt-4 -mb-4 me-4 -ms-4 lg:mt-6 lg:-mb-6 lg:me-6 lg:-ms-6 dark:from-neutral-800 dark:via-neutral-900/0 dark:to-neutral-900/0"></div>
-
       <div class="absolute bottom-0 start-0">
         <svg class="w-2/3 ms-auto h-auto text-white dark:text-neutral-900" width="300" height="451" viewBox="0 0 630 451" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect x="531" y="352" width="99" height="99" fill="currentColor"/>
@@ -37,11 +34,29 @@
           <rect x="531" y="49" width="99" height="99" fill="currentColor"/>
         </svg>
       </div>
-      <!-- End SVG-->
     </div>
-    <!-- End Col -->
   </div>
-  <!-- End Grid -->
 </div>
+
+<div class="services-container">
+    <!-- Check if services exist -->
+    <div *ngIf="services.length > 0; else noServices">
+      <!-- Loop through services and display them -->
+      <div *ngFor="let service of services" class="service-card">
+        <img [src]="service.image" alt="{{ service.name }}" class="service-image"/>
+        <h3>{{ service.name }}</h3>
+        <p>{{ service.description }}</p>
+        <p><strong>Price: </strong>{{ service.price | currency }}</p>
+        <button class="book-now-btn">Book Now</button>
+      </div>
+    </div>
+  
+    <!-- If no services found -->
+    <ng-template #noServices>
+      <p>No services available at the moment.</p>
+    </ng-template>
+  </div>
+  
+  
 
 
