--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="relative ms-4">
-      <img class="w-full rounded-md" src="/assets/001-1.png" alt="Hero Image">
+      <img class="w-full rounded-md" src="../../../assets/𝔅.jpg" alt="Hero Image">
       <div class="absolute inset-0 -z-[1] bg-gradient-to-tr from-gray-200 via-white/0 to-white/0 size-full rounded-md mt-4 -mb-4 me-4 -ms-4 lg:mt-6 lg:-mb-6 lg:me-6 lg:-ms-6 dark:from-neutral-800 dark:via-neutral-900/0 dark:to-neutral-900/0"></div>
       <div class="absolute bottom-0 start-0">
         <svg class="w-2/3 ms-auto h-auto text-white dark:text-neutral-900" width="300" height="451" viewBox="0 0 630 451" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -38,10 +38,14 @@
   </div>
 </div>
 
+<!-- <div class="text">
+  <h1>Featured Services</h1>
+</div>
+
 <div class="services-container">
-    <!-- Check if services exist -->
+  
     <div *ngIf="services.length > 0; else noServices">
-      <!-- Loop through services and display them -->
+    
       <div *ngFor="let service of services" class="service-card">
         <img [src]="service.image" alt="{{ service.name }}" class="service-image"/>
         <h3>{{ service.name }}</h3>
@@ -51,12 +55,32 @@
       </div>
     </div>
   
-    <!-- If no services found -->
     <ng-template #noServices>
       <p>No services available at the moment.</p>
     </ng-template>
   </div>
-  
+   -->
+   <main class="pt-10 mt-5">
+<section class="py-10" id="services">
+    <div class="container w-9/12 mx-auto px-4 ">
+        <h2 class= "block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight dark:text-white">Our Services</h2>
+        <div class="flex flex-wrap justify-center gap-4 ">
+            <div class="col-6 gap-5" *ngFor="let item of services">
+                        <div class="bg-white rounded-lg shadow-md overflow-hidden h-40">
+                            <img src="{{item.image}}" alt="wheat flour grinding"
+                                class="w-full h-64 object-cover">
+                            <div class="p-6 text-center">
+                                <h3 class="text-xl font-medium text-red-800 mb-2">R{{item.price}}</h3>
+                                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                                    Book Now
+                                </button>
+                            </div>
+                        </div>
+            </div>
+        </div>
+    </div>
+</section>
+</main>
   
 
 
