--- a/src/app/components/bookings/bookings.component.css
+++ b/src/app/components/bookings/bookings.component.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     max-width: 1000px;
     margin: 0 auto;
   }
@@ -36,4 +36,4 @@
   .badge-danger {
     background-color: #dc3545;
   }
-  
+   */
