--- a/src/app/components/bookings/bookings.component.html
+++ b/src/app/components/bookings/bookings.component.html
@@ -1,4 +1,116 @@
-<div class="container">
+<div class="flex border-2 p-3 pt-5 gap-4 mx-auto w-11/12  ">
+  <div class=" w-1/2 pt-10 ">
+    <div class="event border rounded-md p-2  basis-1/3 flex flex-col gap-3 mt-4">
+    <h1 class="text-center bg-red-200 rounded-md border-red-400 mx-auto p-2 w-1/2">Event Details</h1>
+    <form class=" mt-3 flex flex-wrap justify-evenly px-3 gap-3" [formGroup]="eventForm" (ngSubmit)="updateEventProperty(eventForm, selectedEvent)">
+      <!-- <div class="basis-full">
+        <label for="c_name" class="block mb-2 text-xs font-medium text-gray-900 dark:text-white">Name</label>
+        <input type="text" id="c_name" formControlName="customer"  [value]="selectedEvent?.extendedProps.user.name" change="" class="bg-gray-50 border rounded-sm text-xs border-gray-300 text-gray-900 text-md rounded-xs focus:ring-blue-500 focus:border-blue-500 block w-full p-1"  required />
+      </div> -->
+      <div class="basis-full
+      ">
+        <label for="title" class="block mb-2 text-xs font-medium text-gray-900 dark:text-white">Title</label>
+        <input type="text"  id="title" formControlName="title" [value]="selectedEvent?.title" class="bg-gray-50 border text-xs border-gray-300 text-gray-900 rounded-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-1"  required />
+      </div>
+      <div class="basis-1/2">
+        <label for="start" class="block mb-2 text-xs font-medium text-gray-900 dark:text-white">Date</label>
+        <input type="date" name="start" id="title" formControlName="startDate" [value]="selectedEvent?.startStr.slice(0,10)" class="bg-gray-50 text-xs border rounded-sm border-gray-300 text-gray-900 text-md focus:ring-blue-500 focus:border-blue-500 block w-full p-1"  required />
+      </div>
+      <div class="basis-1/4">
+        <label for="time" class="block mb-2 text-xs font-medium text-gray-900 dark:text-white">Start Time</label>
+        <input type="time" name="time" id="time" formControlName="time" [value]="selectedEvent?.extendedProps.time" class="bg-gray-50 text-xs border rounded-sm border-gray-300 text-gray-900 text-md focus:ring-blue-500 focus:border-blue-500 block w-full p-1"  required />
+      </div>
+
+      <!-- <div class="basis-full">
+        <label for="end" class="block mb-2 text-xs font-medium text-gray-900 dark:text-white">End time</label>
+        <input type="time" name="end" id="time" formControlName="endDate" [value]="selectedEvent?.startStr.slice(0,10)" class="bg-gray-50 text-xs border rounded-sm border-gray-300 text-gray-900 text-md focus:ring-blue-500 focus:border-blue-500 block w-full p-1"  required />
+      </div> -->
+      
+      <div class="basis-full">
+        <label for="service" class="block mb-2 text-xs font-medium text-gray-900 dark:text-white">Service</label>
+        <input type="text" id="service" formControlName="service" [value]="selectedEvent?.extendedProps.service" class="bg-gray-50 border text-xs border-gray-300 text-gray-900 text-md rounded-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-1"  required />
+      </div>
+      
+      <div class="basis-full">
+        <label for="phone-input" class="block mb-2 text-xs font-medium text-gray-900 dark:text-white">Phone number:</label>
+          <div class="relative">
+              <div class="absolute inset-y-0 start-0 top-0 flex items-center ps-3.5 pointer-events-none">
+                  <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 19 18">
+                      <path d="M18 13.446a3.02 3.02 0 0 0-.946-1.985l-1.4-1.4a3.054 3.054 0 0 0-4.218 0l-.7.7a.983.983 0 0 1-1.39 0l-2.1-2.1a.983.983 0 0 1 0-1.389l.7-.7a2.98 2.98 0 0 0 0-4.217l-1.4-1.4a2.824 2.824 0 0 0-4.218 0c-3.619 3.619-3 8.229 1.752 12.979C6.785 16.639 9.45 18 11.912 18a7.175 7.175 0 0 0 5.139-2.325A2.9 2.9 0 0 0 18 13.446Z"/>
+                  </svg>
+              </div>
+              <input type="text" id="phone-input" aria-describedby="helper-text-explanation" formControlName="contact_no" [value]="selectedEvent?.extendedProps.contact_no" class="bg-gray-50 border border-gray-300 text-gray-900 text-xs rounded-sm focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-1.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required />
+          </div>
+      </div>
+
+      <!-- <div class="w-full">
+        <label for="email" class="block mb-2 text-xs font-medium text-[#111827]">Email</label>
+        <div class="relative text-gray-400">
+          <span class="absolute inset-y-0 left-0 flex items-center p-1 pl-3"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></svg></span> 
+            <input type="email" name="email" id="email" formControlName="email" [value]="selectedEvent?.extendedProps.user.email" class="pl-12 mb-2 bg-gray-50 text-gray-600 border focus:border-transparent border-gray-300 sm:text-sm rounded-sm ring ring-transparent focus:ring-1 focus:outline-none focus:ring-gray-400 block w-full p-1 rounded-l-lg  px-4" placeholder="name@company.com" autocomplete="off">
+        </div>
+      </div> -->
+     
+
+      <div class="basis-full ">
+        <label for="status" class="block mb-2 text-xs font-medium text-gray-900 dark:text-white">Status</label>
+
+        <select  formControlName="status" [value]="selectedEvent?.extendedProps.status" class="bg-gray-50 border border-gray-300 text-gray-900 text-xs rounded-xs focus:ring-blue-500 focus:border-blue-500 block w-full p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+          <option selected class="text-red-500">Choose a status</option>
+          <option value="active">Active</option>
+          <option value="pending">Pending</option>
+          <option value="complete">Complete</option>
+          <option value="cancel">Cancel</option>
+        </select>
+
+
+
+
+
+
+      </div>
+
+      <div class="w-full flex justify-center mb-6">
+        <button type="submit" class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
+          <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+          Update
+          </span>
+          </button>
+
+          <button type="button" (click)="deleteEvent(selectedEvent)" class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-red-400 to-yellow-600 group-yellow:from-yellow-400 orange-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
+            <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+            Delete
+            </span>
+            </button>
+      </div>
+      
+
+  
+  
+    </form>
+  </div>
+  </div>
+    <div class="calendar  rounded-md p-3 w-1/2">
+      <full-calendar 
+      [options]="calendarOptions"
+      [events]="events" #fullcalendar
+      >
+
+    </full-calendar>
+
+    
+    </div>
+    
+    
+</div>
+
+
+
+
+
+
+
+<!-- <div class="container">
     <h2>Bookings</h2>
     
     <button class="btn btn-primary" (click)="createBooking()">Create Booking</button>
@@ -28,5 +140,5 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div> -->
   
