--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
       <div class="mt-7 grid gap-3 w-full sm:inline-flex">
         <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="#">
           Get started
-          <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
+          <svg class="shrink-0 size-4" xmlns="" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
         </a>
       </div>
     </div>
@@ -60,15 +60,16 @@
     </ng-template>
   </div>
    -->
-   <main class="pt-10 mt-5">
+<main class="pt-10 mt-5">
 <section class="py-10" id="services">
     <div class="container w-9/12 mx-auto px-4 ">
-        <h2 class= "block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight dark:text-white">Our Services</h2>
+        <h2 class= "block text-xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight dark:text-white justify-center">Featured Services</h2>
         <div class="flex flex-wrap justify-center gap-4 ">
             <div class="col-6 gap-5" *ngFor="let item of services">
-                        <div class="bg-white rounded-lg shadow-md overflow-hidden h-40">
+                        <div class="bg-white rounded-lg shadow-md overflow-hidden h-40" routerLink="/service/{{item._id}}">
                             <img src="{{item.image}}" alt="wheat flour grinding"
                                 class="w-full h-64 object-cover">
+                                <h3 class="text-xl font-medium text-black-800 mb-2">{{item.name}}</h3>
                             <div class="p-6 text-center">
                                 <h3 class="text-xl font-medium text-red-800 mb-2">R{{item.price}}</h3>
                                 <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
