--- a/src/app/components/single-service/single-service.component.html
+++ b/src/app/components/single-service/single-service.component.html
@@ -1,14 +1,39 @@
-<div class="service-details-container" *ngIf="service">
-    <h2>{{ service.name }}</h2>
-    <p>Description: {{ service.description }}</p>
-    <p>Duration: {{ service.duration }} mins</p>
-    <p class="price">Price: R{{ service.price}}</p>
+<main class="pt-10 mt-5">
+    <section class="py-10" id="service-details">
+        <div class="container w-9/12 mx-auto px-4">
+            <div class="bg-white rounded-lg shadow-md overflow-hidden h-auto">
 
-    <img *ngIf="service.image" [src]="'data:image/jpeg;base64,' + service.image" alt="{{ service.name }} image"/>
-</div>
+                <div *ngIf="service" class="p-6 text-center">
+                    <img  src="{{data.image}}" alt="{{ service.name }}"
+                        class="w-full h-64 object-cover mb-4">
+                    
+                    
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">{{ data.name }}</h2>
 
-<button (click)="goBack()" class="back-button">← Back</button>
+                    
+                    <p class="text-lg text-gray-700 mb-2">Description: {{ service.description }}</p>
 
-<div *ngIf="!service">
-    <p>Loading service details...</p>
-</div>
+                    
+                    <p class="text-lg text-gray-700 mb-2">Duration: {{ service.duration }} mins</p>
+
+                
+                    <h3 class="text-xl font-medium text-red-800 mb-4">Price: R{{ service.price }}</h3>
+
+            
+                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                        Book Now
+                    </button>
+                </div>
+
+                <div *ngIf="!service" class="p-6 text-center">
+                    <p>Loading service details...</p>
+                </div>
+                <div class="text-left p-6">
+                    <button (click)="goBack()" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded">
+                        ← Back
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
